Fix gap issue in footer

--- a/src/rounds/RoundWrapper/RoundWrapper.scss
+++ b/src/rounds/RoundWrapper/RoundWrapper.scss
@@ -100,6 +100,9 @@
     @media (width < 768px) {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+
+        & > div:has(.button):not(:last-child) {
+            margin-bottom: 1rem;
+        }
     }
 }
